@@ -1163,6 +1163,14 @@ process_rr(void)
 		++rrset->rr_count;
 	}
 
+	if(rr->type == TYPE_DNAME && rrset->rr_count > 1) {
+		zc_error_prev_line("multiple DNAMEs at the same name");
+	}
+	if((rr->type == TYPE_DNAME && domain_find_rrset(rr->owner, zone, TYPE_CNAME))
+	 ||(rr->type == TYPE_CNAME && domain_find_rrset(rr->owner, zone, TYPE_DNAME))) {
+		zc_error_prev_line("DNAME and CNAME at the same name");
+	}
+
 #ifdef DNSSEC
 	if (rr->type == TYPE_RRSIG && rr_rrsig_type_covered(rr) == TYPE_SOA) {
 		rrset->zone->is_secure = 1;
